--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "open_exoplanet_catalogue"]
 	path = open_exoplanet_catalogue
-	url = /Users/rein/git/open_exoplanet_catalogue/
+	url = git@github.com:OpenExoplanetCatalogue/open_exoplanet_catalogue.git
